recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.error
Sierpinski:16: error: expected start of definition
	override def run() {
                 ^Sierpinski:20: error: Unmatched closing brace '}' ignored here
}
^