recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.code
def sierpinski(level:Int, length:Double) {
  if (levels==0) {
    avance(length)
  } else {
    sierpinski(levels-1, length/3)
    droite(120)
    sierpinski(levels-1, length/3)
    droite(120)
    sierpinski(levels-1, length/3)
    droite(120)
    avance(length)
  }
}
}